--- a/prime-spiral-3d.html
+++ b/prime-spiral-3d.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>3D Ulam Spiral (up to 300) with High Contrast Colors</title>
+    <title>3D Ulam Spiral</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
     <style>
         body {
