Color change for non-primes

--- a/prime-spiral-3d.html
+++ b/prime-spiral-3d.html
@@ -87,8 +87,8 @@
                     emissiveMaterial(255, 102, 102);  // Emissive material for glow effect
                     box(spacing * 0.8);
                 } else if (showNonPrimes) {
-                    fill(173, 216, 230);  // Pastel greyish light blue for non-primes
-                    emissiveMaterial(173, 216, 230);
+                    fill(215, 200, 232);  // Slightly warmer light pastel purple for non-primes
+                    emissiveMaterial(215, 200, 232);
                     box(spacing * 0.8);
                 }
                 pop();
